--- a/about/index.qmd
+++ b/about/index.qmd
@@ -12,15 +12,16 @@
 
 <img src="../image/portrait.jpg" width="130" style="border-radius: 12px; float:right; margin-left:1rem;"/>
 
-Shiro Tanaka is a biostatistician and currently Professor of Clinical Biostatistics at the Graduate School of Medicine, Kyoto University.
+Shiro Tanaka is a biostatistician and a Professor of Clinical Biostatistics at the Graduate School of Medicine, Kyoto University. This site is his small way of giving back to the community that shaped his training—through books, open-source software, and resources shared generously across borders.
 
-He has served as a trial statistician in translational research at Kyoto University Hospital, as well as in nationwide clinical trial groups in oncology (JCOG), pediatric oncology (JCCG) and osteoporosis (A-TOP). He is an advisory expert for the Pharmaceutical and Medical Devices Agency, a councilor for the Japanese Society for Pharmacoepidemiology and the Biometric Society of Japan, and serves on multiple editorial boards.
 
-His training in causal inference and survival analysis has been shaped by work that crossed borders freely – books, open-source software, and resources shared by colleagues and collaborators around the world. He has been fortunate to work with researchers such as Marc A. Brookhart, Jason P. Fine, and Thomas H. Scheike. This site is his small way of giving back in the same spirit.
+He has served as a trial statistician in nationwide clinical trial groups in oncology (JCOG), pediatric oncology (JCCG), and osteoporosis (A-TOP). He is an advisory expert for the Pharmaceuticals and Medical Devices Agency (PMDA), serves on the council of the Japanese Society for Pharmacoepidemiology and the Biometric Society of Japan, and is on multiple editorial boards.
+
+He has been fortunate to work with researchers such as Marc A. Brookhart, Jason P. Fine, and Thomas H. Scheike.
 
 ## Why "gestimation"?
 
-If you’ve ever wondered why my accounts are called *gestimation*, the name comes from **g-estimation** in causal inference — a class of methods introduced by James Robins. In my own work, I have found this approach very useful in clinical research:
+The name comes from *g-estimation* in causal inference—a class of methods introduced by James Robins. In my own work, I have found this approach especially useful in applied clinical research:
 
 - Tanaka S, Matsuyama Y, Shiraki M, Ohashi Y. Estimating the effects of time-varying osteoporosis treatments on incidence of fractures among Japanese postmenopausal women. Epidemiology 2007;18(5):529–36.
 
