--- a/jp/causal-inference-1.qmd
+++ b/jp/causal-inference-1.qmd
@@ -117,7 +117,7 @@ Keywords: causal model, clinical trial, confounding & collapsibility, observatio
 ## ランダム化の下で第3の因子はどうする？
 
 ::: voice-father
-お父さん「この考え方はランダム化臨床試験でも応用できる。JCOG9912っていう臨床試験の論文を読んだことがあったよね（Sasako, et al. 2006）。あれは、手術方法（TH群またはLTA群）を比較して全生存期間に差があるかを調べた研究だった」
+お父さん「この考え方はランダム化臨床試験でも応用できる。JCOG9502っていう臨床試験の論文を読んだことがあったよね（Sasako, et al. 2006）。あれは、手術方法（TH群またはLTA群）を比較して全生存期間に差があるかを調べた研究だった」
 :::
 
 ::: voice-daughter
@@ -125,7 +125,7 @@ Keywords: causal model, clinical trial, confounding & collapsibility, observatio
 :::
 
 ::: voice-father
-お父さん「正解。でも、この試験ではハザード比を求めるとき、腫瘍径やBorrman分類などがんの進行度を表す変数で調整している。使ったのはロジスティック回帰じゃなくてCox回帰だけどね。」
+お父さん「正解。でも、この試験ではハザード比を求めるとき、いくつかの変数を調整している。使ったのはロジスティック回帰じゃなくてCox回帰だけどね。」
 :::
 
 ::: voice-daughter
@@ -133,26 +133,60 @@ Keywords: causal model, clinical trial, confounding & collapsibility, observatio
 :::
 
 ::: voice-father
-お父さん「ここでもDAGを使って考えられる。Eを手術方法、Dを全生存期間、Cを腫瘍径とすると、図はこうなる。試験結果では有意な関連はなかったけど、わかりやすいようにE→Dの矢印は残したよ」
+お父さん「ここでもDAGを使って考えられる。Eを手術方法、Dを全生存期間、Cをステージとすると、図はこうなる。試験結果では有意な関連はなかったけど、わかりやすいようにE→Dの矢印は残したよ」
 :::
 
-![](causal-inference-1-2.png)
-
+![](causal-inference-1-3.png)
 
 ::: voice-daughter
 私「やっぱり共通原因ではないね」
 :::
 
 ::: voice-father
-お父さん「そう。JCOG9912では、腫瘍径は交絡因子ではないから、調整する必要はなかった。でも、Cox回帰によって全生存期間をモデル化するとしたらどうかな。腫瘍径のような癌の進行度をモデルに入れたくならない？」
+お父さん「そう。ステージは交絡因子ではないから、調整する必要はなかった。でも、Cox回帰によって全生存期間をモデル化するとしたらどうかな。がんのステージはもちろん予後に関係するから、モデルに入れたくならない？」
 :::
 
 ::: voice-daughter
-私「それは入れたくなる。腫瘍径だけじゃなくてリンパ節転移とか、残存腫瘍の有無とかもモデル化したくなる」
+私「それは入れたくなる。ステージだけじゃなくてリンパ節転移とか、残存腫瘍の有無とかもモデル化したくなる」
 :::
 
 ::: voice-father
-お父さん「この図の場合、Cは交絡因子じゃないから、調整しなくてもバイアスは生じない。でも、真に近いモデルを当てはめて、ハザード比の推定精度を高めるという観点からは、Cを調整してもいいんだ」
+お父さん「この図の場合、Cは交絡因子じゃないから、調整しなくてもバイアスは生じない。でも、真に近いモデルを当てはめて、ハザード比の推定精度を高めるという観点からは、Cを調整してもいい。じゃあ、JCOG9502の論文を読んで、調整した変数をリストアップしてよ」
+:::
+
+::: voice-daughter
+私「ほい」
+:::
+
+- ステージ
+- Borrman型
+- 残存腫瘍
+- リンパ節転移（傍大動脈）
+- リンパ節転移（縦隔）
+- リンパ節転移（陽性数）
+- 洗浄細胞診
+
+::: voice-father
+お父さん「このうち術前に確定するものと術中・術後変数はどれなの？術中・術後変数の変数はさっきのDAGとは違い手術の影響を受けるから、E→Cの矢印が必要だよね」
+:::
+
+::: voice-daughter
+私「そうだね、残存腫瘍、リンパ節転移、洗浄細胞診あたりは手術の途中から後に決まるかな。特に残存腫瘍なんかは」
+:::
+
+::: voice-father
+お父さん「じゃあ残存腫瘍を考えよう。Eを手術方法、Dを全生存期間、Cを残存腫瘍とするとDAGはこうなる」
+:::
+
+![](causal-inference-1-2.png)
+
+
+::: voice-daughter
+私「中間媒介因子だね」
+:::
+
+::: voice-father
+お父さん「うん。DAGを用いて交絡因子を選ぶとしたら、残存腫瘍は交絡因子でないから、Cox回帰で調整しないことになる。この研究では、アウトカムを正しくモデル化するという観点から、全生存期間に関連する変数を調整することにしたんだろうね」
 :::
 :::::::::::::::::::::::::::::::::
 
