--- a/jp/causal-inference-2.qmd
+++ b/jp/causal-inference-2.qmd
@@ -28,6 +28,26 @@ Keywords: bias, causal model, confounding & collapsibility, observational study
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
+私「お父さん、共通原因がバイアスってのはわかるんだけど、正直コーヒーと膵がんの話からあんまり進歩した気がしないんだ。その理由はふたつある。まず、私たちが調べてるのは個々の出来事じゃなくて一般法則だよね」
+:::
+
+::: voice-father
+お父さん「うん」
+:::
+
+::: voice-daughter
+私「でも、JCOG9502でステージと術式が独立だったのは、ランダム化したからでしょ。それって人工的じゃない？実地医療ではステージと術式は関連するもの。これでいいのかな。今回のDAGって、普遍的な法則を反映していない気がする。コーヒーと膵がんのときは違和感なかったんだけど」
+:::
+
+::: voice-father
+お父さん「その通り、DAGが示している関係は、あくまで研究から得られたデータを反映するもので、普遍的に成り立つとは限らない。ランダム化臨床試験は
+
+
+が描いている関係」
+:::
+
+
+::: voice-daughter
 私「お父さん、共通原因がバイアスってのはわかるんだけど、コーヒーと膵がんの話からあんまり進歩した気がしないよ。このDAGっていう矢印を使った図、3変数しかないのは単純すぎない？現実はもっと複雑な気がするんだけど」
 :::
 
