--- a/jp/causal-inference-2.qmd
+++ b/jp/causal-inference-2.qmd
@@ -24,7 +24,7 @@ Keywords: bias, causal model, confounding & collapsibility, observational study
 
 ------------------------------------------------------------------------
 
-### 後ろ扉を閉ざすなんて映画みたい
+### DAGと一般因果
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
@@ -36,19 +36,15 @@ Keywords: bias, causal model, confounding & collapsibility, observational study
 :::
 
 ::: voice-daughter
-私「でも、JCOG9502でステージと術式が独立だったのは、ランダム化したからでしょ。それって人工的じゃない？実地医療ではステージと術式は関連するもの。これでいいのかな。今回のDAGって、普遍的な法則を反映していない気がする。コーヒーと膵がんのときは違和感なかったんだけど」
+私「でも、JCOG9502でステージと術式が独立だったのは、ランダム化したからでしょ。それって人工的じゃない？実地医療ではステージと術式は関連するもの。これでいいのかな。今回のDAGっていう矢印を使った図、普遍的じゃない気がする。コーヒーと膵がんのときは違和感なかったんだけど」
 :::
 
 ::: voice-father
-お父さん「その通り、DAGが示している関係は、あくまで研究から得られたデータを反映するもので、普遍的に成り立つとは限らない。ランダム化臨床試験は
-
-
-が描いている関係」
+お父さん「それはランダム化臨床試験が実験的環境を反映しているからかもね。実際、DAGが示している関係は、あくまで研究から得られたデータを反映するもので、どんな環境でも成り立つとは限らない」
 :::
 
-
 ::: voice-daughter
-私「お父さん、共通原因がバイアスってのはわかるんだけど、コーヒーと膵がんの話からあんまり進歩した気がしないよ。このDAGっていう矢印を使った図、3変数しかないのは単純すぎない？現実はもっと複雑な気がするんだけど」
+私「それにさ、いままでのDAGは3変数しかないけど単純すぎない？現実はもっと複雑な気がするんだけど」
 :::
 
 ::: voice-father
@@ -60,9 +56,11 @@ Keywords: bias, causal model, confounding & collapsibility, observational study
 :::
 
 ::: voice-father
-お父さん「じゃあ変数を5つに増やした例を使って、もう少し正式に解説してみようか。ちょっとコーヒーがほしいな」
+お父さん「じゃあ変数を5つに増やした例を使って、もう少し正式に解説してみようか。それにはちょっとコーヒーがほしいな」
 :::
 ::::::::::::::::::::::::::::::::: 
+
+### 後ろ扉を閉ざすなんて映画みたい
 
 ::: {.callout-note appearance="simple"  title="DAGの例"}
 
