--- a/jp/causal-inference-1.qmd
+++ b/jp/causal-inference-1.qmd
@@ -151,7 +151,15 @@ Keywords: causal model, clinical trial, confounding & collapsibility, observatio
 :::
 
 ::: voice-father
-お父さん「この図の場合、Cは交絡因子じゃないから、調整しなくてもバイアスは生じない。でも、真に近いモデルを当てはめて、ハザード比の推定精度を高めるという観点からは、Cを調整してもいい。じゃあ、JCOG9502の論文を読んで、調整した変数をリストアップしてよ」
+お父さん「この図の場合、Cは交絡因子じゃないから、調整しなくてもバイアスは生じない。でも、真に近いモデルを当てはめて、ハザード比の推定精度を高めるという観点からは、Cを調整してもいい」
+:::
+
+- 交絡因子を調整する目的: 因果効果推定におけるバイアス補正
+
+- 回帰モデルに共変量を加える目的: 確率モデルのデータへの当てはまりの改善（結果的にバイアス軽減につながる）
+
+::: voice-father
+お父さん「じゃあ、JCOG9502の論文を読んで、調整した変数をリストアップしてよ」
 :::
 
 ::: voice-daughter
@@ -186,7 +194,7 @@ Keywords: causal model, clinical trial, confounding & collapsibility, observatio
 :::
 
 ::: voice-father
-お父さん「うん。DAGを用いて交絡因子を選ぶとしたら、残存腫瘍は交絡因子でないから、Cox回帰で調整しないことになる。この研究では、アウトカムを正しくモデル化するという観点から、全生存期間に関連する変数を調整することにしたんだろうね」
+お父さん「うん。DAGを用いて交絡因子を選ぶとしたら、残存腫瘍は交絡因子でないから、Cox回帰で調整しないことになる。この研究では、アウトカムを正しくモデル化するという観点から調整変数を選んだみたい。でも中間媒介因子は調整しない方が、純粋に術式の違いだけがもたらす因果効果が得られるから結果の解釈はしやすい」
 :::
 :::::::::::::::::::::::::::::::::
 
