--- a/jp/causal-inference-2.qmd
+++ b/jp/causal-inference-2.qmd
@@ -44,7 +44,7 @@ Keywords: bias, causal model, confounding & collapsibility, observational study
 :::
 
 ::: voice-daughter
-私「それにさ、いままでのDAGは3変数しかないけど単純すぎない？現実はもっと複雑な気がするんだけど」
+私「それにさ、いままでのDAGは3変数しかないけど単純すぎない？現実はもっと複雑だよね」
 :::
 
 ::: voice-father
@@ -66,7 +66,7 @@ Keywords: bias, causal model, confounding & collapsibility, observational study
 
 因果関係の例として、ピロリ菌と胃がんを取り上げます。このふたつの変数には、抗生物質を飲んでピロリ菌を除菌することで、胃がん発生を予防できることが知られていますよね。言い換えると、ピロリ菌除菌は「原因」、胃がん発生は「結果」に対応します。
 
-しかし、胃がんに関連する変数は、これだけではありません。たとえば、若いうちは胃がんにはなりませんが、高齢になると胃がんリスクが高くなりますし、同じ年齢でも胃の炎症など様々な体質の違いが胃がんの発生に関連することがわかっています。これを踏まえて、以下の3つの仮定を置きます。
+しかし、胃がんに関連する変数は、これだけではありません。たとえば、若いうちは胃がんにはなりませんが、高齢になると胃がんリスクが高くなりますし、同じ年齢でも胃の炎症など様々な体質の違いが胃がんの発生に関連することがわかっています。これを踏まえて、以下の3つの仮定を置くことにします。この仮定は必ずしも正しいわけではなく、あくまで説明のための題材です。
 
 -   年齢が高くなるにつれ、胃がんリスクは高くなるが、その一部は胃の炎症の程度に反映される。胃の炎症がひどくなると、胃がんにかかりやすくなり、さらに医療機関に受診して、ピロリ菌を除菌してもらう確率が高くなる
 -   心配性な人もまたピロリ菌除菌を受けやすい。心配性な性格だと、胃の炎症も起こしやすい。ただし、性格はピロリ菌除菌と胃の炎症への影響を通してのみ、胃がんに関連する
@@ -93,50 +93,23 @@ Keywords: bias, causal model, confounding & collapsibility, observational study
 :::
 
 ::: voice-father
-お父さん「結果論だけどあってる。実はね、このDAGはトリッキーで、Cを調整するだけじゃ、バイアスが残る例なんだ。そのあたりも説明するから、話の続きを聞いててね」
-:::
-::::::::::::::::::::::::::::::::: 
-
-::: {.callout-note appearance="simple"  title="DAGの用語"}
-
-次に、DAGで用いられる用語を整理しておきます（Greenland, Pearl, Robins 1999）。ここで説明する用語は、ノード、矢印、有向パス、**バックドアパス（backdoor path）**、祖先と子孫です。
-
-グラフ上の変数を表す点を、ノードといいます。上のグラフには5つのノードがありますよね。2つのノードは、線や矢印で結ばれます。A→Bという矢印で結ぶと、それはAからBへの方向性があることを意味します。因果推論の文脈では、原因から結果への直接的な結びつきを表しています。このグラフでは、AとCは隣接しているが、AはBやDとは結ばれていません。これは、AのCへの直接的影響があるという意味です。直接的影響があるとは、もっというと、グラフ上の他の変数に媒介されない影響がある、ということです。
-
-胃がんの例では、性格は、ピロリ菌除菌と体質を通じて胃がん発生をもたらすと仮定しました。この仮定は、AからBやDへの矢印がないことに対応しています。
-
-矢印で結びついたグラフは、必ず、矢印の頭から入り、頭から出るような一続きの矢印で辿ることができます。直接的または間接的にノードを結びつける矢印の組み合わせのことを、パスといいます。特に、矢印の方向に従って辿ることのできるパスを、方向性のあるパスという意味で有向パスと呼んでいます。上のグラフでは、A→C→Dのパスは有向パスです。
-
-次にE←C→Dについて考えてみましょう。こちらは有向パスではありません。有向パス以外のものを無向パスといいます。
-
-無向パスのうち重要なのは、あるノードから矢印をさかのぼって出て、別のノードに入るパスです。これをバックドアパスといいます。このグラフでは、EからDへのパスは、直接のパス以外はすべてバックドアパスです。
-
-そして、あるノードを出て別のノードに入っていく有向パスがあるとき、前者を祖先、後者を子孫といいます。文献によっては、祖先を原因、子孫を結果と呼んでいることもあります。このグラフでいえば、A、B、Cは、すべてEとDの祖先です。逆に、EとDは、A、B、Cの子孫です。そしてEはDの祖先であり、DはEの子孫です。
-:::
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「ややこしいね。覚えきれない」
-:::
-
-::: voice-father
-お父さん「どこかポイントか説明しておこうか。まず、DAGとは、directedつまり有向パスだけで構成された、acyclicな循環していないグラフっていう意味。つまりDAGって言ったときは、ノード間の結びつきがすべて矢印で表されており、しかも矢印がループ状にぐるぐるまわったりしないってことを前提にしている。有向パスっていうのは、A→B→C→Dのような矢印で連鎖しているノードの集合のことで、この場合はAからDの順に因果関係が伝わることを意味している。ここでひとつ確認してほしいことがあるんだ」
+お父さん「結果論だけどあってる。実はね、このDAGはトリッキーで、Cを調整するだけじゃ、バイアスが残る例なんだ。まず、DAGのそもそもの意味は、directedつまり有向パスだけで構成された、acyclicな循環していないグラフっていうこと。つまりDAGでは、ノード間の結びつきがすべて矢印で表されて、しかも矢印がループ状にぐるぐるまわったりしない。そして、**有向パス**と共有原因を経由する**バックドアパス**の2種類に注目してほしい」
 :::
 
 ::: voice-daughter
-私「どんなこと？」
+私「ふむ」
 :::
 
 ::: voice-father
-お父さん「それは、DAGにおいて、ブロックされていないパスは、**有向パス**と共有原因を経由する**バックドアパス**の2種類しかありえないってこと」
+お父さん「有向パスっていうのは、A→B→C→Dのような矢印で連鎖しているノードの集合のこと。これはAからDの順に因果関係が伝わることを意味している」
 :::
 
 ::: voice-daughter
-私「バックドアパスってなに？」
+私「ふむふむ。バックドアパスってなに？」
 :::
 
 ::: voice-father
-お父さん「ノードに入る矢印を通じたパスのこと。矢印は出るか入るかしかないでしょ」
+お父さん「あるノードに注目してみて。このノードに入る矢印を通じたパスのこと。矢印は出るか入るかしかないでしょ。バックドアパスは、原因に矢印が入る方向から回り込むような経路なんだ」
 :::
 
 ::: voice-daughter
@@ -144,15 +117,15 @@ Keywords: bias, causal model, confounding & collapsibility, observational study
 :::
 
 ::: voice-father
-お父さん「ふーん」
+お父さん「ふーん。とりあえず、有効パスでは矢印が出る、バックドアパスでは矢印が入る、ここをみてみよう」
 :::
 
 ::: voice-daughter
-私「えっと、とりあえず胃がんの例で確認してみるね。このDAGには、EとDを結ぶパスは、両者を直接結び付ける有向パスが1つ、バックドアパスが4つある（E←A→C←B→D、E←A→C→D、E←C←B→D、E←C→D）。でも、確かにバックドアパスは、必ず共通原因Cを経由してるね」
+私「えっと、とりあえず胃がんのやつをみるね。このDAGには、EとDを結ぶパスは、両者を直接結び付ける有向パスが1つ、バックドアパスが4つある（E←A→C←B→D、E←A→C→D、E←C←B→D、E←C→D）」
 :::
 
 ::: voice-father
-お父さん「そうでしょ。ここがDAGの特徴のひとつ。前回の説明を思い出してみて。共通原因は交絡因子として調整すべきっていったよね。DAGが複雑になると、バックドアパスが増えるけど、基本は同じ。すべてのバックドアパスをブロックできるような共通原因を探して、調整すればいいんだ」
+お父さん「そうでしょ。そして、バックドアパスは、必ず共通原因Cを経由している。これがDAGの特徴のひとつ。前回の説明を思い出してみて。共通原因は交絡因子として調整すべきっていったよね。DAGが複雑になると、バックドアパスが増えるけど、基本は同じ。すべてのバックドアパスをブロックできるような共通原因を探して、調整すればいいんだ。共通原因はDAG上のどこにあるかの話、交絡因子はブロックすべき変数の話ってこと」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -172,6 +145,23 @@ Keywords: bias, causal model, confounding & collapsibility, observational study
 私「やはり要石で後ろ扉を閉じるみたいな話だったか」
 :::
 :::::::::::::::::::::::::::::::::
+
+::: {.callout-note appearance="simple"  title="DAGの用語"}
+
+次に、DAGで用いられる用語を整理しておきます（Greenland, Pearl, Robins 1999）。ここで説明する用語は、ノード、矢印、有向パス、**バックドアパス（backdoor path）**、祖先と子孫です。
+
+グラフ上の変数を表す点を、ノードといいます。上のグラフには5つのノードがありますよね。2つのノードは、線や矢印で結ばれます。A→Bという矢印で結ぶと、それはAからBへの方向性があることを意味します。因果推論の文脈では、原因から結果への直接的な結びつきを表しています。このグラフでは、AとCは隣接しているが、AはBやDとは結ばれていません。これは、AのCへの直接的影響があるという意味です。直接的影響があるとは、もっというと、グラフ上の他の変数に媒介されない影響がある、ということです。
+
+胃がんの例では、性格は、ピロリ菌除菌と体質を通じて胃がん発生をもたらすと仮定しました。この仮定は、AからBやDへの矢印がないことに対応しています。
+
+矢印で結びついたグラフは、必ず、矢印の頭から入り、頭から出るような一続きの矢印で辿ることができます。直接的または間接的にノードを結びつける矢印の組み合わせのことを、パスといいます。特に、矢印の方向に従って辿ることのできるパスを、方向性のあるパスという意味で有向パスと呼んでいます。上のグラフでは、A→C→Dのパスは有向パスです。
+
+次にE←C→Dについて考えてみましょう。こちらは有向パスではありません。有向パス以外のものを無向パスといいます。
+
+無向パスのうち重要なのは、あるノードから矢印をさかのぼって出て、別のノードに入るパスです。これをバックドアパスといいます。このグラフでは、EからDへのパスは、直接のパス以外はすべてバックドアパスです。
+
+そして、あるノードを出て別のノードに入っていく有向パスがあるとき、前者を祖先、後者を子孫といいます。文献によっては、祖先を原因、子孫を結果と呼んでいることもあります。このグラフでいえば、A、B、Cは、すべてEとDの祖先です。逆に、EとDは、A、B、Cの子孫です。そしてEはDの祖先であり、DはEの子孫です。
+:::
 
 ::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
 下のDAGにおいて、破線で示したパスA-C-Bに注目してください。このパスにおいて、Cは次のうちどれでしょうか。
