--- a/kanji_en/index.qmd
+++ b/kanji_en/index.qmd
@@ -21,7 +21,7 @@ The second character, *ga*, is more concrete.
 It is composed of two vertical parts.
 The lower part represents a tree.
 Above it is a shape that depicts fruit growing on the branches—fruit that has reached full maturity.
-Here, ga signifies not a process in progress, but something that has fully developed and come to completion.
+Here, *ga* signifies not a process in progress, but something that has fully developed and come to completion.
 
 The third character, *sui*, can also be divided into two parts, though this time horizontally.
 On the left is a component representing a hand; on the right, a bird.
@@ -33,7 +33,7 @@ The final character, *ron*, is the most abstract.
 Let us begin with its right-hand component.
 This element conveys the idea of arranging multiple elements in an orderly and structured way.
 On the left is a component that, even in modern form, directly signifies language.
-Together, ron represents the act of giving structure and order to ideas through words.
+Together, *ron* represents the act of giving structure and order to ideas through words.
 
 Taken together, causal inference—when expressed in Japanese—can be seen as composed of eight elements:
 
