--- a/jp/frequentist-2.qmd
+++ b/jp/frequentist-2.qmd
@@ -55,6 +55,7 @@ Keywords: clinical trial, language & writing, p-value, survival & competing risk
 ::: {.callout-note appearance="simple"  title="coxph()を用いたハザード比の推定"}
 ハザード比を推定する方法はいくつかありますが、もっともポピュラーなのは**survival**パッケージの`coxph()`です。以前のエピソードでは、関数`generate_data(hr1, hr2)`を用いて、ストーマの有無やOSのデータを生成しました。今回は同じデータにCox回帰を当てはめ、ストーマあり群とストーマなし群のハザード比を計算してみます。この関数では、死亡ハザード比の真値はhr2という引数で指定できます。
 :::
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple"  collapse="true" title="generate_data()のコードはこちら（データ生成に使用）"}
 ```{r warning=FALSE}
@@ -119,6 +120,7 @@ summary(fit)
 
 ### p値に関する一見正しそうな説明
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「ハザード比とp値は知ってる。ハザード比は、TH群が基準になってて、ハザード比が1より小さいとき、TH群よりLTA群の方がOSやDFSがいいってこと？p値は0.05より小さいと統計学的に有意なんでしょ。つまり、LTA群の方が、治療成績が悪かったけど、p値をみると2群に有意差はないんだよね」
 :::
@@ -172,7 +174,7 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「その通り。同じ試験を100回繰り返したらp値が100個出てくるでしょ。これがこの場合の確率の定義なんだ。頻度論的確率っていって。じゃあ次。p値が小さいことは、“科学的に重要な知見が得られたこと”を意味すると思う？」
+お父さん「その通り。同じ試験を100回繰り返したらp値が100個出てくるでしょ。これがこの場合の確率の定義なんだ。頻度論的確率（frequentist probability）とかいうね。じゃあ確率の意味の次は、p値の解釈。p値が小さいことは、“科学的に重要な知見が得られたこと”を意味すると思う？」
 :::
 
 ::: voice-daughter
@@ -204,11 +206,11 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「もう最後にするよ。それにコーヒーも残ってるじゃない。三つ目の説明“統計学的に有意でない結果は、帰無仮説が正しいので採択すべきであることを意味する”についてはどう？これは正しいかな？」
+お父さん「説教臭かった？三つ目の説明“統計学的に有意でない結果は、帰無仮説が正しいので採択すべきであることを意味する”まで考えようよ。これは正しい？」
 :::
 
 ::: voice-daughter
-私「教科書かなにかで、p値は、仮説を棄却するためのもので、採択しちゃだめって読んだ気がする。この最後の説明も、やっぱり間違いなんでしょ。でもさ、実際問題として、有意差がつかなかったらどうなるの？たとえば実薬AとBを比較する臨床試験だったとして、AとBの効果は同等と結論に書いていいの？」
+私「教科書かなにかで、p値は、仮説を棄却するためのもので、採択しちゃだめって読んだ気がする。この最後の説明も、やっぱり間違いなんでしょ、目を見ればわかる。でもさ、実際問題として、有意差がつかなかったらどうなるの？たとえば実薬AとBを比較する臨床試験だったとして、AとBの効果は同等と結論に書いていいの？」
 :::
 
 ::: voice-father
@@ -220,33 +222,45 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「そうだね、仮説にはうるさいね。これは日本の話なんだけど。昔、薬事承認の根拠として非劣性試験を行っていた時代があってね。その時代の経験を踏まえると、研究仮説と統計的な判断基準の関係は、厳密に考えとかないとちょっとまずいと思うんだ」
+お父さん「やっぱり仮説とその判定が臨床試験の焦点だからね。これはもう30年ほど前の日本の話なんだけど。昔、薬事承認の根拠として非劣性試験を行っていた時代があってね。その時代の経験を踏まえると、研究仮説と統計的な判断基準の関係は、厳密に考えとかないとちょっとまずいと思うんだ」
+:::
+::::::::::::::::::::::::::::::::: dialogue
+
+### 臨床試験の技術評価としての側面
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「ふむ。えっと。この論文を読んで思ったんだけどね。基礎研究だと、有意差がつかない結果はいまいちじゃない？でもJCOG9502は違う。LTAの有効性が示されたわけでも、術式が同等ってわかったわけでもない。でもどうしてLancet Oncologyに載るほど評価されたんだろう」
+:::
+
+::: voice-father
+お父さん「ん？有意差がつかない臨床試験結果に価値がないとは思わないけど。臨床試験って、治療のよさを評価することが目的でしょ。有効性が示されるかどうかに関わらず、評価が定まったということに変わりはないじゃない」
+:::
+
+::: voice-daughter
+私「...それってネガティブ試験でも価値が変わらないってことだよね。臨床試験は技術を評価することが目的だってこと？科学的発見じゃなくて？」
+:::
+
+::: voice-father
+お父さん「うん。歴史的にみて臨床試験は技術評価のために行われてきた。p値の使い方や、有効性エンドポイントの定義の標準化も、評価基準を一定に保つための工夫だった。臨床試験ってさ、制度としては、各国の製薬企業が承認を得るために行ってきたものが中心だったでしょ。でも、90年代はまだ臨床試験の規格が統一されていなかった。90年代後半になって、米国、欧州、日本の規制当局が集まって臨床試験の標準規格を策定したんだ」
+:::
+
+::: voice-daughter
+私「それは医師主導臨床試験じゃなくて治験だよね。あんまり納得いかないよ。臨床試験の結果、何度もパラダイムシフトが起きてきたもの。S-1や分子標的薬、抗PD-1抗体とか、明らかに科学の進歩に関わってる」
+:::
+
+::: voice-father
+お父さん「それは技術評価の結果が科学を刺激しただけじゃないかなあ」
+:::
+
+::: voice-daughter
+私「お父さんって、技術と科学を区別したがるね。まあ、企業治験は技術評価のくくりでも私はいいよ。でも、科学の営み全体をみたとき、臨床試験はその一部だと思う。結果が仮説を更新して、次の問いを生むから」
 :::
 ::::::::::::::::::::::::::::::::::::
 
 ::: {.callout-note appearance="simple"  title="ホパテの悲劇"}
 
 脳循環改善薬という古い薬をご存知でしょうか？この薬はかつて脳血管障害の後遺症や認知症などに使われ、累計8,000億円ほどの売上げがあったようです。脳循環改善薬にはいくつかの類似薬がありましたが、そのほとんどが、最初に承認されたホパンテン酸カルシウム（販売名ホパテ）と比較した「非劣性試験」を根拠に承認されていました。しかし当時行われていたのは、正式な非劣性の解析ではなく、「ホパンテン酸カルシウムと比べて有意差がない」ことにもとづいて非劣性を判定していました。1998年にホパンテン酸カルシウムは副作用のため市場から撤退しました。同時期に、厚生省（当時）は製薬企業にプラセボ対照試験による再評価を求めました。その結果、脳循環改善薬は、すべてプラセボに勝てなかったのです。この悲劇は、有意差がつかなかったとき、同等や非劣性と結論するのは間違いであることを明確に示しています。
-:::
-
-::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
-
-![](frequentist-2.jpg)
-
-この人は誰でしょう。
-
-1.  Kaplan
-2.  Meier
-3.  Cox
-4.  Wilcoxon
-:::
-
-::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
--   **正解は3です**
-
-この方がCox先生です。
-
-[David Cox (statistician)](https://en.wikipedia.org/wiki/David_Cox_(statistician))
 :::
 
 
