--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -51,7 +51,7 @@ Keywords: effect measure, language & writing, observational study, research hypo
 :::
 
 ::: voice-daughter
-私「それはそうだよね。喫煙者の15%ががんになる、なんて思わないもの。でも正確な意味はわかんないな」
+私「それはそうだよね。喫煙者の15%ががんになる、なんて思わないもの。でも正確な意味はぱっとわかんないな」
 :::
 
 ::: voice-father
@@ -135,11 +135,11 @@ $$
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「同じパーセントでも、リスク差の2.5%とexcess fractionの74%は印象がだいぶ違う」
+私「同じパーセントでも、リスク差の2.5%とexcess fractionの74%は印象がだいぶ違う。まあ、私が公衆衛生やっていないのもあるけど」
 :::
 
 ::: voice-father
-お父さん「でしょ、言葉と認識にギャップがあるよね。それに、ただの計算だと思うとかえって理解しにくいところもある。たとえ話をさせてよ。60歳になってがん検診にきた人が4人いたとする。話をわかりやすくするために、4人の健康状態はまったく同じだとしよう。そのうち、最初の2人はがん検診が陽性で、根治切除できたとする。その後、71歳と79歳まで生きることができた。つまり、がん検診後の生存期間は11年と19年」
+お父さん「でしょ。同じパーセントで言葉と認識にギャップがあるよね。まあ臨床試験のハザード比は"どの治療を選ぶか"、寄与割合は"社会に介入すると疾患がどれだけ減るか"だから、慣れの問題もあるかもだけど。効果の指標って、ただの計算だと思うとかえって理解しにくいところもある。たとえ話をさせてよ。60歳になってがん検診にきた人が4人いたとする。話をわかりやすくするために、4人の健康状態はまったく同じだとしよう。そのうち、最初の2人はがん検診が陽性で、根治切除できたとする。その後、71歳と79歳まで生きることができた。つまり、がん検診後の生存期間は11年と19年」
 :::
 
 ::: voice-daughter
