--- a/jp/frequentist-2.qmd
+++ b/jp/frequentist-2.qmd
@@ -41,7 +41,7 @@ Keywords: clinical trial, language & writing, p-value, survival & competing risk
 :::
 
 ::: voice-father
-お父さん「うん。どちらの図でもTH群のKaplan-Meier曲線が、きれいにLTA群の上にあるでしょ、右端の人数が4人しかいないところでは交差しているけど。ハザード比は、2本の生存曲線が、ハザードのスケールで比例関係にあることが前提なんだ。この関係を、**Cox回帰（Cox regression）**とか**比例ハザードモデル（proportional hazards model）**って呼んでいる」
+お父さん「うん。どちらの図でもTH群のKaplan-Meier曲線が、きれいにLTA群の上にあるでしょ、右端の人数が4人しかいないところでは交差しているけど。ハザード比は、2本の生存曲線が、ハザードのスケールで比例関係にあることが前提なんだ。ハザード比の基準は書かれていないけどTH群。この関係を、**Cox回帰（Cox regression）**とか**比例ハザードモデル（proportional hazards model）**って呼んでいる」
 :::
 
 ::: voice-daughter
@@ -51,11 +51,11 @@ Keywords: clinical trial, language & writing, p-value, survival & competing risk
 ::: voice-father
 お父さん「そういうこと。それに、OSとDFSの結果が一貫している。これもすごく素直な結果だよね。解釈しやすい。この話題は後で話すとして、まずはCox回帰をRでやってみよう。パソコンはある？」
 :::
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple"  title="coxph()を用いたハザード比の推定"}
 ハザード比を推定する方法はいくつかありますが、もっともポピュラーなのは**survival**パッケージの`coxph()`です。以前のエピソードでは、関数`generate_data(hr1, hr2)`を用いて、ストーマの有無やOSのデータを生成しました。今回は同じデータにCox回帰を当てはめ、ストーマあり群とストーマなし群のハザード比を計算してみます。この関数では、死亡ハザード比の真値はhr2という引数で指定できます。
 :::
-::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple"  collapse="true" title="generate_data()のコードはこちら（データ生成に使用）"}
 ```{r warning=FALSE}
@@ -122,19 +122,19 @@ summary(fit)
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「ハザード比とp値は知ってる。ハザード比は、TH群が基準になってて、ハザード比が1より小さいとき、TH群よりLTA群の方がOSやDFSがいいってこと？p値は0.05より小さいと統計学的に有意なんでしょ。つまり、LTA群の方が、治療成績が悪かったけど、p値をみると2群に有意差はないんだよね」
+私「この図をみるとハザード比は1.36と1.29だよね。ハザードが高いほどKaplan-Meier曲線が下がる、比の分母はTH群だっけ。ということは、ハザード比が1より大きいと、TH群よりLTA群の方がOSやDFSの成績が下がるんだよね？あと、p値は0.05より小さいと統計学的に有意なんでしょ。つまり、LTA群の方が、治療成績がわるかったけど、p値をみると2群に有意差はないんだよね」
 :::
 
 ::: voice-father
-お父さん「そういうことだね。ハザードはイベント/観察人年で求める“率”で、ハザード比はその2群間の“比”だから。生存時間解析で使う指標だね」
+お父さん「そういうことだね。ハザードは死亡や再発が起きるスピードを表していて、ハザード比はその2群間の“比”だから」
 :::
 
 ::: voice-daughter
-私「うんうん。でもそういうのって統計の教科書に書いてないよね。平均とか回帰係数ばっかり」
+私「うんうん。でもそういう説明って統計の教科書に書いてないよね。平均とか回帰係数ばっかり」
 :::
 
 ::: voice-father
-お父さん「分野によって使われる統計手法が違うからね。がんの臨床試験データの解析を勉強するなら、米国で有名な臨床試験グループ（SWOG）の統計家が書いた臨床試験の教科書がいいよ（Green, et al. 2013）。話を戻すとさ。大まかな理解はあってるけど、p値の正確な意味は誤解されてることが多いんだよ。まあ、頻度論（frequentist）の立場で統計学をきっちりやらないと、なかなか難しいんだけどね。まず、試験によってはp値と比べる基準（有意水準）が5%でないこともある。たとえば**中間解析（interim analysis）**があるかな。論文の抄録を読んでごらん。実はJCOG9502では最終解析の前に、中間解析をする計画になっていて、この論文はそのとき早期中止になった結果を報告しているみたいだよ。中間解析では、5%より低い有意水準で検定するのが一般的なんだ」
+お父さん「生存時間解析は教科書では後回しになりがちだからね。がんの臨床試験データの解析を勉強するなら、米国で有名な臨床試験グループ（SWOG）の統計家が書いた臨床試験の教科書がいいよ（Green, et al. 2013）。話を戻すとさ。大まかな理解はあってるけど、p値の正確な意味は誤解されてることが多いんだよ。まあ、頻度論（frequentist）の立場で統計学をきっちりやらないと、なかなか難しいんだけどね。まず、試験によってはp値と比べる基準（有意水準）が5%でないこともある。たとえば**中間解析（interim analysis）**があるかな。論文の抄録を読んでごらん。実はJCOG9502では最終解析の前に、中間解析をする計画になっていて、この論文はそのとき早期中止になった結果を報告しているみたいだよ。中間解析では、5%より低い有意水準で検定するのが一般的なんだ」
 :::
 
 ::: voice-daughter
@@ -154,11 +154,11 @@ summary(fit)
 :::
 
 ::: voice-daughter
-私「それでいいんじゃない？p値が0.05だったら100回に5回は正しい」
+私「黒板くさくなってきた。統計の教科書って私がいったの、地雷だったか？まあ、1はそれでいいんじゃない？p値が0.05だったら100回に5回は正しい」
 :::
 
 ::: voice-father
-お父さん「さっきの生存曲線を見ると、差がある確率より、差がない確率の方が高そうだもの。ここではね、言葉を正確に選んで考えてみてほしいんだ。“LTA群とTH群に生存曲線に差がない”っていう命題や仮説は、確率変数かな？確率変数ではないよね。命題は、正しいかどうかのどちらかしかないもの。確率変数ではないのに、確率が定義されるのは学問的におかしい」
+お父さん「さっきの生存曲線を見ると、差がある確率より、差がない確率の方が高そうだもの。ここではね、言葉を正確に選んで考えてみてほしいんだ。“生存曲線に差がない”っていう命題や仮説は、確率変数かな？確率変数ではないよね。命題は、正しいかどうかのどちらかしかないもの。確率変数ではないのに、確率が定義されるのは学問的におかしい」
 :::
 
 ::: voice-daughter
@@ -206,7 +206,7 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「説教臭かった？三つ目の説明“統計学的に有意でない結果は、帰無仮説が正しいので採択すべきであることを意味する”まで考えようよ。これは正しい？」
+お父さん「三つ目の説明“統計学的に有意でない結果は、帰無仮説が正しいので採択すべきであることを意味する”まで考えようよ。これは正しい？」
 :::
 
 ::: voice-daughter
@@ -230,7 +230,7 @@ summary(fit)
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「ふむ。えっと。この論文を読んで思ったんだけどね。基礎研究だと、有意差がつかない結果はいまいちじゃない？でもJCOG9502は違う。LTAの有効性が示されたわけでも、術式が同等ってわかったわけでもない。でもどうしてLancet Oncologyに載るほど評価されたんだろう」
+私「教科書的な説明は、それはそれでいいんだけどさ。なんだか、現実とギャップを感じるよ、私は。2の"p値が小さいと科学的に重要"についてなんだけどね。そうはいっても基礎研究だと、有意差がつかない結果はいまいちって扱われない？それが現実だと思う。でもJCOG9502は違うのもわかる。LTAの有効性が示されたわけでも、術式が同等ってわかったわけでもない。でもどうしてLancet Oncologyに載るほど評価されたんだろう」
 :::
 
 ::: voice-father
@@ -238,15 +238,15 @@ summary(fit)
 :::
 
 ::: voice-daughter
-私「...それってネガティブ試験でも価値が変わらないってことだよね。臨床試験は技術を評価することが目的だってこと？科学的発見じゃなくて？」
+私「...ネガティブ試験でも価値が変わらないってことだよね。臨床試験は技術を評価するのが目的ってこと？科学的発見じゃなくて？」
 :::
 
 ::: voice-father
-お父さん「うん。歴史的にみて臨床試験は技術評価のために行われてきた。p値の使い方や、有効性エンドポイントの定義の標準化も、評価基準を一定に保つための工夫だった。臨床試験ってさ、制度としては、各国の製薬企業が承認を得るために行ってきたものが中心だったでしょ。でも、90年代はまだ臨床試験の規格が統一されていなかった。90年代後半になって、米国、欧州、日本の規制当局が集まって臨床試験の標準規格を策定したんだ」
+お父さん「うん。歴史的にみて臨床試験は技術評価の制度の中で行われてきた。p値の使い方や、有効性エンドポイントの定義の標準化も、評価基準を一定に保つための工夫だった。臨床試験ってさ、各国の製薬企業が承認を得るために行ってきたものが中心でしょ。でも、90年代はまだ臨床試験の規格が統一されていなかった。90年代後半になって、米国、欧州、日本の規制当局が集まって臨床試験の標準規格を策定したんだ」
 :::
 
 ::: voice-daughter
-私「それは医師主導臨床試験じゃなくて治験だよね。あんまり納得いかないよ。臨床試験の結果、何度もパラダイムシフトが起きてきたもの。S-1や分子標的薬、抗PD-1抗体とか、明らかに科学の進歩に関わってる」
+私「それは医師主導臨床試験じゃなくて治験だよね。...お父さんさ、やっぱり臨床試験はパラダイムシフトを起こしてない？殺細胞薬、抗PD-1、ADC。あれを"技術評価"って呼ぶのは、あんまり納得いかないな」
 :::
 
 ::: voice-father
@@ -254,13 +254,13 @@ summary(fit)
 :::
 
 ::: voice-daughter
-私「お父さんって、技術と科学を区別したがるね。まあ、企業治験は技術評価のくくりでも私はいいよ。でも、科学の営み全体をみたとき、臨床試験はその一部だと思う。結果が仮説を更新して、次の問いを生むから」
+私「お父さんって、技術と科学を区別したがるね。まあ、企業治験は技術評価のくくりでも私はいいよ。でも、科学の営み全体をみたとき、臨床試験はその一部だと思う。結果が仮説を更新して、次の問いを生む。私はそれを科学って呼びたい」
 :::
 ::::::::::::::::::::::::::::::::::::
 
 ::: {.callout-note appearance="simple"  title="ホパテの悲劇"}
 
-脳循環改善薬という古い薬をご存知でしょうか？この薬はかつて脳血管障害の後遺症や認知症などに使われ、累計8,000億円ほどの売上げがあったようです。脳循環改善薬にはいくつかの類似薬がありましたが、そのほとんどが、最初に承認されたホパンテン酸カルシウム（販売名ホパテ）と比較した「非劣性試験」を根拠に承認されていました。しかし当時行われていたのは、正式な非劣性の解析ではなく、「ホパンテン酸カルシウムと比べて有意差がない」ことにもとづいて非劣性を判定していました。1998年にホパンテン酸カルシウムは副作用のため市場から撤退しました。同時期に、厚生省（当時）は製薬企業にプラセボ対照試験による再評価を求めました。その結果、脳循環改善薬は、すべてプラセボに勝てなかったのです。この悲劇は、有意差がつかなかったとき、同等や非劣性と結論するのは間違いであることを明確に示しています。
+脳循環改善薬という古い薬をご存知でしょうか？この薬はかつて脳血管障害の後遺症や認知症などに使われ、累計8,000億円ほどの売上げがあったようです。脳循環改善薬にはいくつかの類似薬がありましたが、そのほとんどが、最初に承認されたホパンテン酸カルシウム（販売名ホパテ）と比較した「非劣性試験」を根拠に承認されていました。しかし当時行われていたのは、正式な非劣性の解析ではなく、「ホパンテン酸カルシウムと比べて有意差がない」ことにもとづいて非劣性を判定していました。1989年にホパンテン酸カルシウムは副作用のため市場から撤退しました。同時期に、厚生省（当時）は製薬企業にプラセボ対照試験による再評価を求めました。その結果、脳循環改善薬は、すべてプラセボに勝てなかったのです。この悲劇は、有意差がつかなかったとき、同等や非劣性と結論するのは間違いであることを明確に示しています。
 :::
 
 
