--- a/jp/frequentist-2.qmd
+++ b/jp/frequentist-2.qmd
@@ -246,7 +246,7 @@ summary(fit)
 :::
 
 ::: voice-daughter
-私「それは医師主導臨床試験じゃなくて治験だよね。...お父さんさ、やっぱり臨床試験はパラダイムシフトを起こしてない？殺細胞薬、抗PD-1、ADC。あれを"技術評価"って呼ぶのは、あんまり納得いかないな」
+私「それは医師主導臨床試験じゃなくて治験だよね。お父さんさ、やっぱり臨床試験はパラダイムシフトを起こしてない？殺細胞薬、抗PD-1、ADC。あれを"技術評価"って呼ぶのは、あんまり納得いかないな」
 :::
 
 ::: voice-father
